--- a/Exp-2/portfolio.html
+++ b/Exp-2/portfolio.html
@@ -5,46 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <style>
-        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
         .container {
             width: 80%;
-            margin: 0 auto;
+            margin: auto;
+            overflow: hidden;
         }
-        h1 {
-            text-align: center;
-            font-weight: bold;
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #77aaff 3px solid;
         }
-        .nav {
-            list-style: none;
-            background-color: aqua;
-            width: 100%;
-            padding: 10px;
-            margin-left: 0px;
-        }
-        .nav li {
-            display: inline-block;
-            padding: 10px;
-            margin-left: 50px;
-        }
-        .nav a {
+        header a {
+            color: #fff;
             text-decoration: none;
-            color: black;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        header ul {
+            padding: 0;
+            list-style: none;
+        }
+        header li {
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+        .main {
+            padding: 20px;
+            background: #fff;
         }
         .section {
-            margin: 20px 0;
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            color: #333;
+        }
+        .section p, .section ul {
+            color: #666;
+        }
+        .section ul {
+            list-style: none;
+            padding: 0;
+        }
+        .section ul li {
+            background: #f4f4f4;
+            margin: 5px 0;
+            padding: 10px;
+            border: #ccc 1px solid;
         }
         footer {
-            background-color: black;
-            color: white;
+            background: #333;
+            color: #fff;
             text-align: center;
-            padding: 10px;
-            width: 100%;
-            bottom: 0;
+            padding: 10px 0;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -115,4 +136,4 @@
         <p><span>&copy; 2025 Ashrith. All rights reserved.</span></p>
     </footer>
 </body>
-</html>
+</html></section></ul>
